@@ -1,3 +1,7 @@
+2011-05-27  Jason Merrill  <jason@redhat.com>
+
+	* g++.dg/template/const5.C: New.
+
 2011-05-26  Thomas Koenig  <tkoenig@gcc.gnu.org>
 
 	PR fortran/48955
